--- a/index.html
+++ b/index.html
@@ -2,109 +2,114 @@
 <html lang="en">
 <head>
 <meta charset="utf-8"/>
-<meta name="viewport" content="width=device-width,initial-scale=1"/>
+<meta name="viewport" content="width=device-width, initial-scale=1"/>
 <title>Happy Birthday 🎀</title>
 
 <style>
-  html,body{
-    height:100%;
-    margin:0;
-    font-family: "Inter", system-ui, Arial;
-    background: url("assets/cover.png") center/cover no-repeat;
-    display:flex;
-    align-items:center;
-    justify-content:center;
-    color:#fff;
+  html, body {
+    height: 100%;
+    margin: 0;
+    font-family: "Inter", system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
   }
 
-  body::before{
-    content:"";
-    position:fixed;
-    inset:0;
+  body {
+    background: url("assets/bg-hearts-1.png") center/cover no-repeat;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  /* soft overlay for readability */
+  .overlay {
+    position: absolute;
+    inset: 0;
     background: linear-gradient(
       180deg,
-      rgba(255,182,193,0.45),
-      rgba(255,192,203,0.65)
+      rgba(255,255,255,0.35),
+      rgba(255,255,255,0.65)
     );
-    z-index:0;
   }
 
-  .card{
-    position:relative;
-    z-index:1;
-    background: rgba(255,255,255,0.15);
-    backdrop-filter: blur(14px);
-    border-radius:22px;
-    padding:30px 26px;
-    max-width:360px;
-    width:100%;
-    text-align:center;
-    box-shadow: 0 30px 60px rgba(0,0,0,0.25);
+  .card {
+    position: relative;
+    z-index: 2;
+    background: rgba(255,255,255,0.55);
+    backdrop-filter: blur(12px);
+    border-radius: 22px;
+    padding: 36px 26px;
+    max-width: 420px;
+    width: 90%;
+    text-align: center;
+    box-shadow: 0 30px 80px rgba(0,0,0,0.15);
+    animation: fadeUp 1s ease;
   }
 
-  .small{
-    font-size:13px;
-    letter-spacing:2px;
-    opacity:0.9;
-    margin-bottom:10px;
+  @keyframes fadeUp {
+    from { opacity: 0; transform: translateY(20px); }
+    to   { opacity: 1; transform: translateY(0); }
   }
 
-  h1{
-    margin:0;
-    font-size:30px;
-    font-weight:900;
+  .small {
+    font-size: 13px;
+    letter-spacing: 2px;
+    color: #b36b88;
+    margin-bottom: 12px;
+    text-transform: uppercase;
   }
 
-  p{
-    margin:14px 0 22px;
-    font-size:15px;
-    line-height:1.5;
-    opacity:0.95;
+  h1 {
+    font-size: 34px;
+    margin: 0;
+    color: #ff6f91;
+    font-weight: 900;
   }
 
-  .signature{
-    margin-top:6px;
-    font-size:14px;
-    opacity:0.9;
+  .line {
+    margin-top: 14px;
+    font-size: 16px;
+    color: #6b4b5a;
+    line-height: 1.6;
   }
 
-  .btn{
-    border:none;
-    padding:14px 26px;
-    border-radius:999px;
-    font-size:15px;
-    font-weight:800;
-    cursor:pointer;
-    background: linear-gradient(180deg,#fff,#ffe6ec);
-    color:#d14d72;
-    box-shadow: 0 14px 30px rgba(255,105,135,0.35);
+  .btn {
+    margin-top: 28px;
+    padding: 14px 28px;
+    border-radius: 999px;
+    border: none;
+    cursor: pointer;
+    font-size: 16px;
+    font-weight: 800;
+    background: linear-gradient(90deg, #ff9a9e, #fad0c4);
+    color: #4a2c2a;
+    box-shadow: 0 16px 40px rgba(255,140,160,0.35);
+    transition: transform .15s ease, box-shadow .15s ease;
   }
 
-  .btn:active{
-    transform: scale(0.97);
+  .btn:hover {
+    transform: translateY(-3px);
+    box-shadow: 0 22px 60px rgba(255,140,160,0.45);
+  }
+
+  .btn:active {
+    transform: translateY(0);
   }
 </style>
 </head>
-
 <body>
-  <div class="card">
-    <div class="small">A LITTLE BIRTHDAY SPACE ✨</div>
-    <h1>Happy Birthday 🎀</h1>
 
-    <p>
-      This page is made just to make you smile.<br>
-      Take a breath — and enjoy.
-    </p>
+<div class="overlay"></div>
 
-    <div class="signature">
-      — from <strong>Abhi</strong> 💗
-    </div>
-
-    <br>
-
-    <button class="btn" onclick="location.href='page2.html'">
-      Start 🎂
-    </button>
+<div class="card">
+  <div class="small">A little birthday space 🌸</div>
+  <h1>Happy Birthday 🎀</h1>
+  <div class="line">
+    This page is made just to make you smile.
   </div>
+
+  <button class="btn" onclick="location.href='page2.html'">
+    Start 🎂
+  </button>
+</div>
+
 </body>
 </html>
