--- a/page2.html
+++ b/page2.html
@@ -2,114 +2,106 @@
 <html lang="en">
 <head>
 <meta charset="utf-8"/>
-<meta name="viewport" content="width=device-width,initial-scale=1"/>
-<title>A Small Surprise 🎁</title>
+<meta name="viewport" content="width=device-width, initial-scale=1"/>
+<title>A Little Gift 🎁</title>
 
 <style>
-  html,body{
-    height:100%;
-    margin:0;
-    font-family: "Inter", system-ui, Arial;
-    background: url("assets/page2-bg.png") center/cover no-repeat;
-    display:flex;
-    align-items:center;
-    justify-content:center;
-    color:#fff;
+  html, body {
+    height: 100%;
+    margin: 0;
+    font-family: "Inter", system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
   }
 
-  body::before{
-    content:"";
-    position:fixed;
-    inset:0;
-    background: linear-gradient(
-      180deg,
-      rgba(255,182,193,0.45),
-      rgba(255,192,203,0.75)
-    );
-    z-index:0;
+  body {
+    background: url("assets/bg-hearts-2.png") center/cover no-repeat;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
   }
 
-  .card{
-    position:relative;
-    z-index:1;
-    background: rgba(255,255,255,0.16);
-    backdrop-filter: blur(16px);
-    border-radius:24px;
-    padding:32px 26px;
-    max-width:380px;
-    width:100%;
-    text-align:center;
-    box-shadow: 0 30px 70px rgba(0,0,0,0.25);
+  .overlay {
+    position: absolute;
+    inset: 0;
+    background: rgba(255,255,255,0.55);
   }
 
-  .icon{
-    font-size:48px;
-    margin-bottom:10px;
-    animation: float 2.8s ease-in-out infinite;
+  .wrap {
+    position: relative;
+    z-index: 2;
+    text-align: center;
+    animation: fadeIn 1s ease;
   }
 
-  @keyframes float{
-    0%{transform:translateY(0)}
-    50%{transform:translateY(-8px)}
-    100%{transform:translateY(0)}
+  @keyframes fadeIn {
+    from { opacity: 0; transform: translateY(20px); }
+    to   { opacity: 1; transform: translateY(0); }
   }
 
-  h2{
-    margin:0;
-    font-size:24px;
-    font-weight:900;
+  h2 {
+    font-size: 28px;
+    color: #ff6f91;
+    margin-bottom: 10px;
+    font-weight: 900;
   }
 
-  p{
-    margin:16px 0 22px;
-    font-size:15px;
-    line-height:1.6;
-    opacity:0.95;
+  .hint {
+    color: #6b4b5a;
+    font-size: 15px;
+    margin-bottom: 26px;
   }
 
-  .note{
-    font-size:14px;
-    opacity:0.9;
-    margin-bottom:22px;
+  /* gift box */
+  .gift {
+    width: 180px;
+    height: 180px;
+    border-radius: 22px;
+    background: url("assets/gift-box.png") center/contain no-repeat;
+    margin: 0 auto;
+    cursor: pointer;
+    animation: float 2.4s ease-in-out infinite;
+    transition: transform .2s ease;
   }
 
-  .btn{
-    border:none;
-    padding:14px 26px;
-    border-radius:999px;
-    font-size:15px;
-    font-weight:800;
-    cursor:pointer;
-    background: linear-gradient(180deg,#fff,#ffe6ec);
-    color:#d14d72;
-    box-shadow: 0 14px 30px rgba(255,105,135,0.35);
+  .gift:active {
+    transform: scale(0.95);
   }
 
-  .btn:active{
-    transform: scale(0.97);
+  @keyframes float {
+    0%   { transform: translateY(0); }
+    50%  { transform: translateY(-10px); }
+    100% { transform: translateY(0); }
+  }
+
+  .tap {
+    margin-top: 18px;
+    font-size: 14px;
+    color: #b36b88;
+    letter-spacing: 1px;
   }
 </style>
 </head>
-
 <body>
-  <div class="card">
-    <div class="icon">🎁</div>
 
-    <h2>A Little Surprise</h2>
+<div class="overlay"></div>
 
-    <p>
-      Birthdays aren’t just about cake and candles.<br>
-      Sometimes they’re about moments, memories,<br>
-      and a smile you didn’t expect.
-    </p>
+<div class="wrap">
+  <h2>Just one thing… 🎀</h2>
+  <div class="hint">Tap the gift — there’s something waiting ✨</div>
 
-    <div class="note">
-      Made with care by <strong>Abhi</strong> 💗
-    </div>
+  <div class="gift" onclick="openGift()"></div>
 
-    <button class="btn" onclick="location.href='page3.html'">
-      Open it ✨
-    </button>
-  </div>
+  <div class="tap">Tap gently 💗</div>
+</div>
+
+<script>
+  function openGift(){
+    // small delay for “opening” feel
+    setTimeout(()=>{
+      location.href = "page3.html";
+    }, 450);
+  }
+</script>
+
 </body>
 </html>
