--- a/page3.html
+++ b/page3.html
@@ -2,128 +2,149 @@
 <html lang="en">
 <head>
 <meta charset="utf-8"/>
-<meta name="viewport" content="width=device-width,initial-scale=1"/>
-<title>A Small Message 💌</title>
+<meta name="viewport" content="width=device-width, initial-scale=1"/>
+<title>Soft Playlist 🎶</title>
 
 <style>
-  html,body{
-    height:100%;
-    margin:0;
-    font-family: "Inter", system-ui, Arial;
-    background: linear-gradient(180deg,#ffb6c1,#ffd6e3);
-    display:flex;
-    align-items:center;
-    justify-content:center;
-    color:#5a2a3c;
+  html, body {
+    height: 100%;
+    margin: 0;
+    font-family: "Inter", system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
   }
 
-  .wrap{
-    padding:24px;
-    width:100%;
-    max-width:420px;
+  body {
+    background: url("assets/bg-music.png") center/cover no-repeat;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
 
-  .card{
-    background: rgba(255,255,255,0.55);
-    backdrop-filter: blur(14px);
-    border-radius:26px;
-    padding:30px 26px;
-    box-shadow: 0 30px 70px rgba(0,0,0,0.18);
-    position:relative;
+  .overlay {
+    position: absolute;
+    inset: 0;
+    background: rgba(255,255,255,0.6);
   }
 
-  .card::before{
-    content:"";
-    position:absolute;
-    inset:0;
-    border-radius:26px;
-    border:2px solid rgba(255,255,255,0.4);
-    pointer-events:none;
+  .card {
+    position: relative;
+    z-index: 2;
+    width: 90%;
+    max-width: 420px;
+    background: rgba(255,255,255,0.85);
+    border-radius: 24px;
+    padding: 26px 22px;
+    box-shadow: 0 30px 70px rgba(0,0,0,0.12);
+    animation: rise 0.9s ease;
   }
 
-  h2{
-    margin:0 0 14px;
-    font-size:24px;
-    font-weight:900;
-    text-align:center;
+  @keyframes rise {
+    from { opacity: 0; transform: translateY(30px); }
+    to   { opacity: 1; transform: translateY(0); }
   }
 
-  .msg{
-    font-size:15px;
-    line-height:1.75;
-    opacity:0.95;
+  h2 {
+    text-align: center;
+    color: #ff6f91;
+    font-size: 26px;
+    margin-bottom: 8px;
+    font-weight: 900;
   }
 
-  .msg p{
-    margin:0 0 14px;
+  .subtitle {
+    text-align: center;
+    font-size: 15px;
+    color: #6b4b5a;
+    margin-bottom: 22px;
   }
 
-  .sign{
-    margin-top:18px;
-    font-weight:700;
-    text-align:right;
+  .art {
+    width: 180px;
+    height: 180px;
+    margin: 0 auto 22px;
+    background: url("assets/playlist-cloud.png") center/contain no-repeat;
   }
 
-  .controls{
-    margin-top:26px;
-    display:flex;
-    justify-content:center;
+  .track {
+    background: #fff;
+    border-radius: 16px;
+    padding: 14px 16px;
+    margin-bottom: 14px;
+    box-shadow: 0 8px 20px rgba(0,0,0,0.08);
   }
 
-  .btn{
-    border:none;
-    padding:14px 26px;
-    border-radius:999px;
-    font-size:15px;
-    font-weight:800;
-    cursor:pointer;
-    background: linear-gradient(180deg,#ff6f91,#ff9ab3);
-    color:#fff;
-    box-shadow: 0 14px 30px rgba(255,105,135,0.35);
+  .track-title {
+    font-weight: 800;
+    font-size: 16px;
+    color: #333;
   }
 
-  .btn:active{
+  .track-artist {
+    font-size: 13px;
+    color: #777;
+    margin-top: 4px;
+  }
+
+  .track-desc {
+    font-size: 13px;
+    color: #999;
+    margin-top: 6px;
+  }
+
+  .btn {
+    display: block;
+    margin: 24px auto 0;
+    padding: 14px 26px;
+    border-radius: 999px;
+    border: none;
+    background: linear-gradient(90deg,#ff8fb1,#ffb6c1);
+    color: #fff;
+    font-weight: 900;
+    font-size: 15px;
+    cursor: pointer;
+    box-shadow: 0 12px 30px rgba(255,120,160,0.35);
+  }
+
+  .btn:active {
     transform: scale(0.97);
   }
 </style>
 </head>
-
 <body>
-  <div class="wrap">
-    <div class="card">
 
-      <h2>Just a Small Note 💗</h2>
+<div class="overlay"></div>
 
-      <div class="msg">
-        <p>
-          Birthdays come once a year, but the little moments
-          that make life warm stay with us much longer.
-        </p>
+<div class="card">
+  <h2>Soft Playlist 🎧</h2>
+  <div class="subtitle">Songs that feel warm, calm, and safe ☁️</div>
 
-        <p>
-          This is just a gentle reminder that you matter —
-          more than you realise — and that it’s okay to grow,
-          change, rest, and still dream at your own pace.
-        </p>
+  <div class="art"></div>
 
-        <p>
-          Wherever life takes you next, I hope it brings
-          comfort, laughter, and moments that feel quietly
-          beautiful.
-        </p>
-      </div>
-
-      <div class="sign">
-        — Abhi 💫
-      </div>
-
-      <div class="controls">
-        <button class="btn" onclick="location.href='page4.html'">
-          Continue ✨
-        </button>
-      </div>
-
-    </div>
+  <div class="track">
+    <div class="track-title">Golden</div>
+    <div class="track-artist">Harry Styles</div>
+    <div class="track-desc">Light, happy, and full of sunshine energy.</div>
   </div>
+
+  <div class="track">
+    <div class="track-title">Sunday Best</div>
+    <div class="track-artist">Surfaces</div>
+    <div class="track-desc">That peaceful smile-kind of song.</div>
+  </div>
+
+  <div class="track">
+    <div class="track-title">Put Your Records On</div>
+    <div class="track-artist">Corinne Bailey Rae</div>
+    <div class="track-desc">Soft reminder to relax and enjoy the moment.</div>
+  </div>
+
+  <button class="btn" onclick="nextPage()">Next 💌</button>
+</div>
+
+<script>
+  function nextPage(){
+    location.href = "page4.html";
+  }
+</script>
+
 </body>
 </html>
