--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   }
 
   body {
-    background: url("assets/bg-hearts-1.png") center/cover no-repeat;
+    background: url("assets/images/cover-bg.png") center/cover no-repeat;
     display: flex;
     align-items: center;
     justify-content: center;
