Update background and gift box image paths

--- a/page2.html
+++ b/page2.html
@@ -13,7 +13,7 @@
   }
 
   body {
-    background: url("assets/bg-hearts-2.png") center/cover no-repeat;
+    background: url("assets/images/soft-bg.png") center/cover no-repeat;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -56,7 +56,7 @@
     width: 180px;
     height: 180px;
     border-radius: 22px;
-    background: url("assets/gift-box.png") center/contain no-repeat;
+    background: url("assets/images/gift-box.png") center/contain no-repeat;
     margin: 0 auto;
     cursor: pointer;
     animation: float 2.4s ease-in-out infinite;
@@ -96,7 +96,6 @@
 
 <script>
   function openGift(){
-    // small delay for “opening” feel
     setTimeout(()=>{
       location.href = "page3.html";
     }, 450);
