--- a/page4.html
+++ b/page4.html
@@ -13,7 +13,7 @@
   }
 
   body {
-    background: url("assets/bg-final.png") center/cover no-repeat;
+    background: url("assets/images/bg-final.png") center/cover no-repeat;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -107,7 +107,6 @@
   <h2>For You 🌷</h2>
 
   <div id="text" class="letter"></div>
-
   <div id="sign" class="signature"></div>
 
   <div class="buttons">
